# dataflow_simulation

./: README.md  simulate.sh
Graph_json/ArrayIngest/: ArrayIngest.json
Graph_json/Benshmarks/ArrayIngest/: ArrayIngest_Demo.json  ArrayIngest_physical.json  ArrayIngest_physical_templet.json
Graph_json/Benshmarks/cycles/10_cycles/: 10_cycles.json  10_cycles_physical.json  10_cycles_physical_templet.json
Graph_json/Benshmarks/cycles/1_cycle/: 1_cycle.json  1_cycle_physical.json  1_cycle_physical_templet.json
Graph_json/Benshmarks/cycles/20_cycles/: 20_cycles.json  20_cycles_physical.json  20_cycles_physical_templet.json
Graph_json/Benshmarks/cycles/4_cycles/: 4_cycles.json  4_cycles_physical.json  4_cycles_physical_templet.json
Graph_json/Benshmarks/cycles/6_cycles/: 6_cycles.json  6_cycles_physical.json  6_cycles_physical_templet.json
Graph_json/Benshmarks/cycles/8_cycles/: 8_cycles.json  8_cycles_physical.json  8_cycles_physical_templet.json
Graph_json/Benshmarks/dependencies/10000/: depend_bensh_1000.json  depend_bensh_1000_physical.json  depend_bensh_1000_physical_templet.json
Graph_json/Benshmarks/dependencies/1000000/: depend_bensh_1000000.json  depend_bensh_1000000_physical.json  depend_bensh_1000000_physical_templet.json
Graph_json/Benshmarks/multiple_nodes/: multiple_nodes.json  multiple_nodes_physical.json  multiple_nodes_physical_templet.json
Graph_json/Benshmarks/root-Streaming/: nonstreaming.json  nstreaming_physical.json  streaming.json  streaming_physical_templet.json
Graph_json/Benshmarks/streaming_producer_consumer/: streaming_producer_consumer.json  streaming_producer_consumer_physical.json  streaming_producer_consumer_physical_templet.json
Graph_json/Data_masters/: data_master.json
Graph_json/Gather/: gather.json
Graph_json/RandomArray_cpy_av/: old_json_RandomArray_copy_average.json  simple_example.graph
Graph_json/Star/: star.json
Graph_json/cont_image_sdp/: cont_image_sdp.json
Graph_json/multiple_nodes_RandomArrat_cpy_av/: new_simple_lg4.json  new_simple_pg.json
Graph_json/stream/: random_stram.json
Tesh/: tesh
parse_simul_Daliuge/: .clang-format  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
parse_simul_Daliuge/UML/class_diagram/: calss_diagram.drawio  calss_diagram.drawio.xml  calss_diagram_without_types.drawio
parse_simul_Daliuge/UML/simulation_diagram/: simulate_DAluige.drawio  simulate_DAluige.drawio.xml  simulation_communication.txt
parse_simul_Daliuge/parsing_DALiuge_Json/: CMakeLists.txt  CTestTestfile.cmake  Makefile
parse_simul_Daliuge/parsing_DALiuge_Json/Test/: parsing_example.tesh  parsing_print_example  parsing_print_example.cpp
parse_simul_Daliuge/parsing_DALiuge_Json/include/: parse_Json.h
parse_simul_Daliuge/parsing_DALiuge_Json/src/: parse_Json.cpp
parse_simul_Daliuge/src/Tests/: ArrayIngest.tesh  Data_masters.tesh  Gather.tesh  Star.tesh  cont_image_sdp.tesh  multiple_nodes_RandomArrat_cpy_av.tesh
parse_simul_Daliuge/src/simul_using_deploy/: simul_using_deploy.cpp  simul_using_deploy.tesh
parse_simul_Daliuge/src/simul_using_json/: simul_using_json.cpp  simul_using_json_stream.cpp
platform/: deploy.xml  platform.xml  small_platform.xml
(+18 files in other folders)
